<resources>
    <string name="up">Ascent</string>
    <string name="down">Descent</string>
    <string name="hello">Running</string>
    <string name="app_stopped">%1$s finalized</string>
    <string name="heartratemonitor">Heart Rate</string>
    <string name="heartratemonitor2">Heart Rate 2</string>
    <string name="heartratesuunto">Heart Rate Suunto</string>
    <string name="heartratezephyr">Heart Rate Zephyr</string>
    <string name="bikespeedcadence">Speed Cadence sensor</string>
    <string name="bikespeed">Speed sensor</string>
    <string name="bikecadence">Cadence sensor</string>
    <string name="bikepower">Power</string>
    <string name="bikepower2">Power 2</string>
    <string name="bikepower3">Power 3</string>
    <string name="bikepower4">Power 4</string>
    <string name="locationdevice">Location device</string>
    <string name="timedevice">Clock</string>
    <string name="winddevice">Windmeter</string>
    <string name="airpressuresensor">Pressure sensor</string>
    <string name="batterysensor">Battery</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magneticdevice">Compass</string>
    <string name="hint_long_click">Long click the view to change field</string>
    <string name="hint_value_click">Click here to choose a data field.</string>
    <string name="toast_pause">Activity paused.</string>
    <string name="menu_startstop">Start/Stop activity</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sendmail">Share</string>
    <string name="menu_history">History</string>
    <string name="voicevaluepopup">Fields to announce</string>
    <string name="startpopup">Activity</string>
    <string name="movestartpopup">Movement detected: Start?</string>
    <string name="stoppopup">Activity stop or pause</string>
    <string name="sharepopup">Share</string>
    <string name="unitpopup">Select Unit</string>
    <string name="valuepopup">Select Field</string>
    <string name="yearpopup">Select Year</string>
    <string name="monthpopup">Select Month</string>
    <string name="daypopup">Select Day</string>
    <string name="timespopup">Select a Time</string>
    <string name="no_unit_choice">The field has no option to choose unit</string>
    <string name="no_year_choice">No historical data available yet</string>
    <string name="no_month_choice">No historical data available in %1$s</string>
    <string name="chosen_file">Chosen file</string>
    <string name="set_level">Current slope as 0</string>
    <string name="step1settingspopup">Step 1 of 2: Settings&lt;BR&gt; (click to change)</string>
    <string name="step2startpopup">Step 2 of 2: Activity</string>
    <string name="step_continue">Next step</string>
    <string name="popitem_bluetooth_on">Bluetooth is ON</string>
    <string name="popitem_bluetooth_off">Bluetooth is OFF</string>
    <string name="popitem_pairing_on">%1$s will only pair with previously used ANT+ sensors</string>
    <string name="popitem_pairing_off">%1$s will pair with all nearby ANT+ sensors</string>
    <string name="no_device_info_yet">No ANT+ sensor info yet</string>
    <string name="app_quitmessage">Do you want to quit the %1$s application</string>
    <string name="level_message">Current slope is set as reference level</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_confirm">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="deviceinfo_title">ANT Device</string>
    <string name="hint_title">Hint %1$d of %2$d</string>
    <string name="about_title">About</string>
    <string name="no_sd_title">No SD card</string>
    <string name="no_sd_message">No SD card mounted to store data or to read data from</string>
    <string name="dialog_calibrate_title">Calibrate Power Sensor</string>
    <string name="dialog_calibrate_msg">Do you want to calibrate your power sensor? Check manual of your power sensor how this works.</string>
    <string name="warn_stopactivity_title">Replay history causes stop</string>
    <string name="warn_stopactivity_msg">Replaying a previous activity will stop the current activity. Do you want to continue?</string>
    <string name="warn_reset_title">Reset will clear totals</string>
    <string name="warn_reset_msg">This action will clear your totals for time, distance, energy and more. Do you want to continue?</string>
    <string name="warn_nospeech_title">Text to speech is off</string>
    <string name="warn_nospeech_msg">In order to get audible announcements you need to switch \'text to speech\' on. Do you want to change the \'text to speech\' settings?</string>
    <string name="warn_nobluetooth_title">Bluetooth is off</string>
    <string name="warn_nobluetooth_msg">This app can only connect to the Kestrel weather station if Bluetooth is switched on. Do you want to change the Bluetooth settings?</string>
    <string name="average">Average</string>
    <string name="max">Maximum</string>
    <string name="settings_title">Settings</string>
    <string name="settings_ant_title">ANT+ &amp; sensor info</string>
    <string name="settings_gps_title">GPS</string>
    <string name="settings_bluetooth_title">Bluetooth</string>
    <string name="settings_android_display">Dim interval</string>
    <string name="settings_android_display_detail">Scroll to \'Sleep\' in \'Display\' settings &#8230;</string>
    <string name="settings_share_title">Cloud &amp; Share</string>
    <string name="settings_speech_title">Speech</string>
    <string name="settings_display_title">Display</string>
    <string name="settings_android_title">Android settings</string>
    <string name="settings_android_location_title">Check GPS availability</string>
    <string name="settings_android_location_summary">Verify GPS in global Android settings</string>
    <string name="settings_android_texttospeech_title">Android text to speech settings</string>
    <string name="settings_calibrate_title">Calibrate power sensor</string>
    <string name="settings_bike_title">Bike details</string>
    <string name="settings_hints">Hints</string>
    <string name="settings_replay">Replay options</string>
    <string name="title_autoswitch_preference">Time between different fields</string>
    <string name="summary_autoswitch_preference">When you choose to show multiple field in one window, the time that a field is shown ().</string>
    <string name="dialog_title_autoswitch_preference">Choose field change interval</string>
    <string name="display_preferences">Display settings</string>
    <string name="title_click_preference">Click to switch field</string>
    <string name="summary_click_preference">Clicking does change field</string>
    <string name="summary_noclick_preference">Clicking does not change field</string>
    <string name="title_hasmap_preference">Maps</string>
    <string name="summary_hasmap_preference">Show background maps </string>
    <string name="summary_nohasmap_preference">Do not show background maps</string>
    <string name="title_dim_preference">Dim behaviour</string>
    <string name="summary_dim_preference">Allow screen to dim. Saves battery power: []</string>
    <string name="title_usepairing_preference">ANT+ pairing</string>
    <string name="summary_pairingon_preference">Device will only pair with previously used ANT+ sensors</string>
    <string name="summary_pairingoff_preference">Device will pair with all near ANT+ sensors</string>
    <string name="deviceinfo_preference">Sensor info</string>
    <string name="summary_deviceinfo_preference">Shows info about detected sensors</string>
    <string name="voice_preferences">Speech</string>
    <string name="title_voiceinterval_preference">Time between messages</string>
    <string name="summary_voiceinterval_preference">Interval ().</string>
    <string name="dialog_title_voiceinterval_preference">Choose speech interval</string>
    <string name="title_voiceon_preference">Speech</string>
    <string name="summary_voiceon_preference">Speech is turned on</string>
    <string name="summary_voiceoff_preference">Speech is turned off</string>
    <string name="title_voicechange_preference">Speech on change</string>
    <string name="summary_voicechangeon_preference">A bigger change in value will trigger a spoken text, regardless of speech interval</string>
    <string name="summary_voicechangeoff_preference">A bigger change in value will not trigger a spoken text</string>
    <string name="ant_preferences">ANT+ settings</string>
    <string name="bike_preferences">Bike parameters</string>
    <string name="title_wheelcirc_preference">Wheel circumference in mm</string>
    <string name="summary_wheelcirc_preference">Circumference of wheel in mm = [].</string>
    <string name="title_wheelsize_preference">Wheel &amp; Tire size</string>
    <string name="summary_wheelsize_preference">Wheel &amp; Tire size = [].</string>
    <string name="gps_preferences">GPS settings</string>
    <string name="title_gpson_preference">Use GPS</string>
    <string name="summary_gpson_preference">GPS on. Accurate locations. But drains the battery.</string>
    <string name="summary_gpsoff_preference">GPS off. Location not precise</string>
    <string name="title_gpsinterval_preference">GPS interval</string>
    <string name="summary_gpsinterval_preference">Frequent polls for GPS position will drain the battery ().</string>
    <string name="dialog_title_gpsinterval_preference">Choose GPS poll interval</string>
    <string name="title_windows_preference">Windows</string>
    <string name="summary_windows_preference">Number of windows to view ().</string>
    <string name="dialog_title_windows_preference">Choose number of windows</string>
    <string name="title_xtravalues_preference">Extra fields</string>
    <string name="summary_xtravalues_preference">Show extra fields (like satellites)</string>
    <string name="summary_noxtravalues_preference">Do not show extra fields</string>
    <string name="title_svox_preference">Link to SVOX with international voices</string>
    <string name="reset_totals">Reset totals</string>
    <string name="title_bikeprofile_preference">Bike profile</string>
    <string name="summary_bikeprofile_preference">Current profile: [].</string>
    <string name="title_bikeprofilename_preference">Edit profile name</string>
    <string name="summary_bikeprofilename_preference">Name of profile: [].</string>
    <string name="dialogmsg_altcalibration_preference">Altitude</string>
    <string name="title_altcalibration_preference">Altitude calibration</string>
    <string name="summary_altcalibration_preference">Current offset ().</string>
    <string name="title_test_preference">Test options</string>
    <string name="summary_test_preference">Chosen test option []</string>
    <string name="menu_interval">Interval</string>
    <string name="dialogmsg_maxheartrate_preference">Heart rate</string>
    <string name="title_maxheartrate_preference">Max. heart rate</string>
    <string name="summary_maxheartrate_preference">Maximum heart rate ().</string>
    <string name="title_gpsaltbaroadjust_preference">Barometer adjustment</string>
    <string name="summary_gpsaltbaroadjuston_preference">Allow barometer to adjust altitude</string>
    <string name="summary_gpsaltbaroadjustoff_preference">Do not allow barometer to adjust altitude</string>
    <string name="settings_bluetooth_summary">Suunto Dual bands may not work when Bluetooth is on!</string>
    <string name="settings_bluetoothle_title">Bluetooth Low Energy</string>
    <string name="settings_bluetoothle_summary">Bluetooth Low Energy devices</string>
    <string name="dialog_title_tilesource_preference">Map tile source</string>
    <string name="title_tilesource_preference">Map Tile source</string>
    <string name="summary_tilesource_preference">Open Street Map tile source: []</string>
</resources>